[project]
name = "api-performance-lab"
version = "0.1.0"
description = ""
authors = [
    {name = "Luan"}
]
package-mode = false
requires-python = ">=3.10,<4.0"
dependencies = [
    "pytest (>=9.0.3,<10.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "jsonschema (>=4.26.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
