[tool.poetry]
name = "api-performance-lab"
version = "0.1.0"
description = "Laboratório de testes de API e Performance"
authors = ["Luan <luanmarcel.severino@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^9.0.3"
requests = "^2.33.1"
jsonschema = "^4.26.0"
allure-pytest = "^2.15.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"